Custom--app/main/default/objects/App_Track_CheckBox_And_DateTime_By_Map__mdt/App_Track_CheckBox_And_DateTime_By_Map__mdt.object-meta.xml
<CustomObject>
    <description>This is holding Application Tracking Checkbox with LA User Updated and DateTime When Checked Fields</description>
    <label>App Track CheckBox And DateTime By Map</label>
    <pluralLabel>App Track CheckBox And DateTime By Maps</pluralLabel>
</CustomObject>