Custom--app/main/default/objects/App_Track_CheckBox_And_DateTime_By_Map__mdt/fields/CheckBox_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>CheckBox_Field_Name__c</fullName>
    <label>CheckBox Field Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>