Custom--app/main/default/objects/App_Track_CheckBox_And_DateTime_By_Map__mdt/fields/DateTime_Checked__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Checked__c</fullName>
    <label>DateTime Checked</label>
    <length>200</length>
    <type>Text</type>
</CustomField>