Custom--app/main/default/objects/App_Track_CheckBox_And_DateTime_By_Map__mdt/fields/LA_Updated__c.field-meta.xml
<CustomField>
    <fullName>LA_Updated__c</fullName>
    <label>LA Updated</label>
    <length>200</length>
    <type>Text</type>
</CustomField>